draft-ietf-rohc-ipsec-extensions-hcoipsec-08

--- a/draft-ietf-rohc-ipsec-extensions-hcoipsec-08.html
+++ b/draft-ietf-rohc-ipsec-extensions-hcoipsec-08.html
@@ -153,11 +153,11 @@
 <tr><td class="header">Network Working Group</td><td class="header">E. Ertekin</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">C. Christou</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">Booz Allen Hamilton</td></tr>
-<tr><td class="header">Expires: August 6, 2010</td><td class="header">C. Bormann</td></tr>
+<tr><td class="header">Expires: August 19, 2010</td><td class="header">C. Bormann</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Universitaet Bremen TZI</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">February 02, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">February 15, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />IPsec Extensions to Support Robust Header Compression over IPsec<br />draft-ietf-rohc-ipsec-extensions-hcoipsec-07</h1>
+<h1><br />IPsec Extensions to Support Robust Header Compression over IPsec<br />draft-ietf-rohc-ipsec-extensions-hcoipsec-08</h1>
 
 <h3>Abstract</h3>
 
@@ -189,7 +189,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on August 6, 2010.</p>
+This Internet-Draft will expire on August 19, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -604,17 +604,32 @@ traffic that exceeds the SA PMTU:
 </pre></div><p>
 
 </p>
-<p>For ROHCoIPsec, Cases 1 and 3, and the post-encryption fragmentation for Case 2 are employed.  However, since current 
-ROHC compression profiles do not support the compression of IP packet fragments, pre-encryption fragmentation is not compatible
-with the current set of ROHC profiles.  In place of pre-encryption fragmentation, ROHC segmentation MAY be used at the compressor to 
-divide the packet, where each segment conforms to the tunnel MTU. However, because in-order delivery of ROHC segments is 
-not guaranteed, the use of ROHC segmentation is not recommended.
+<p>For the ROHCoIPsec processing model, there is one minor change to the 
+   procedure stated above.  This change applies to pre-encryption 
+   fragmentation for Case 2.  Since current ROHC compression profiles 
+   do not support compression of IP packet fragments, pre-encryption 
+   fragmentation MUST NOT occur before ROHC processing.
 </p>
-<p>If the compressor determines that the compressed packet exceeds the tunnel MTU, ROHC segmentation MAY be applied to the compressed packet
-before AH or ESP processing.  This determination can be made by comparing the anticipated ROHCoIPsec packet size to the Path MTU data item 
-specified in the SAD entry.  If the MRRU for the channel is non-zero, the compressor applies ROHC segmentation.  If segmentation is applied, the process MUST account for the additional overhead imposed by IPsec 
-process (e.g., AH or ESP overhead, crypto synchronization data, the additional IP header, etc.) such that the final IPsec-processed segments are 
-less than the tunnel MTU.  After segmentation, each ROHC segment is consecutively processed by the appropriate security protocol (e.g., AH, ESP) instantiated on the ROHC-enabled SA.    Since ROHC segments are processed consecutively, the associated AH/ESP sequence number MUST be incremented by one for each segment transmitted over the ROHC channel.  As such, after all ROHC segments receive AH/ESP processing, these segments can be identified (at the remote IPsec implementation) by a range of contiguous AH/ESP sequence numbers.
+<p>If the compressed packet exceeds the SA PMTU, and the MRRU is non-zero,
+   ROHC segmentation MAY be used to divide the packet, where each segment 
+   conforms to the tunnel MTU.  ROHC segmentation MUST occur before 
+   AH or ESP processing.  Because in-order delivery of 
+   ROHC segments is not guaranteed, the use of ROHC segmentation is 
+   not recommended.
+</p>
+<p>If segmentation is applied, the process MUST account for the 
+   additional overhead imposed by the IPsec process (e.g., AH or ESP 
+   overhead, crypto synchronization data, the additional IP header, 
+   etc.) such that the final IPsec-processed segments are less than 
+   the tunnel MTU.  After segmentation, each ROHC segment is 
+   consecutively processed by the appropriate security 
+   protocol (e.g., AH, ESP) instantiated on the ROHC-enabled SA.  
+   Since ROHC segments are processed consecutively, the associated 
+   AH/ESP sequence number MUST be incremented by one for each segment 
+   transmitted over the ROHC channel.  As such, after all ROHC 
+   segments receive AH/ESP processing, these segments can be 
+   identified (at the remote IPsec implementation) by a range of 
+   contiguous AH/ESP sequence numbers.
 </p>
 <p>For channels where the MRRU is non-zero, the ROHCoIPsec decompressor MUST re-assemble the ROHC segments that are received.  To accomplish 
 this, the decompressor MUST identify the ROHC segments (as documented in Section 5.2.6 of RFC 4995 [ROHC]), and attempt reconstruction using the
