draft-ietf-nsis-ntlp-sctp-14

--- a/draft-ietf-nsis-ntlp-sctp-14.html
+++ b/draft-ietf-nsis-ntlp-sctp-14.html
@@ -154,11 +154,11 @@
 <tr><td class="header">Network Working Group</td><td class="header">X. Fu</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">C. Dickmann</td></tr>
 <tr><td class="header">Intended status: Experimental</td><td class="header">University of Goettingen</td></tr>
-<tr><td class="header">Expires: December 26, 2010</td><td class="header">J. Crowcroft</td></tr>
+<tr><td class="header">Expires: December 27, 2010</td><td class="header">J. Crowcroft</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">University of Cambridge</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">June 24, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">June 25, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />General Internet Signaling Transport (GIST) over Stream Control Transmission Protocol (SCTP) and Datagram Transport Layer Security (DTLS)<br />draft-ietf-nsis-ntlp-sctp-13.txt</h1>
+<h1><br />General Internet Signaling Transport (GIST) over Stream Control Transmission Protocol (SCTP) and Datagram Transport Layer Security (DTLS)<br />draft-ietf-nsis-ntlp-sctp-14.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -182,7 +182,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on December 26, 2010.</p>
+This Internet-Draft will expire on December 27, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -613,12 +613,10 @@ used.
    confidentiality or integrity protection. The specific DTLS version
    will be negotiated within the DTLS layer itself, but implementations
    MUST NOT negotiate to protocol versions prior to DTLS v1.0 and MUST
-   use the highest protocol version supported by both peers. GIST nodes 
-   supporting DTLS MUST be able to negotiate the DTLS
-   NULL and block ciphers and SHOULD be able to negotiate the
-   new cipher suites.  They MAY negotiate any
-   mutually acceptable ciphersuite that provides authentication,
-   integrity, and confidentiality. The same rules for negotiating TLS cipher suites 
+   use the highest protocol version supported by both peers. 
+NULL authentication and integrity ciphers MUST NOT be negotiated for GIST nodes supporting DTLS. 
+For confidentiality ciphers, nodes can negotiate the NULL ciphersuites. 
+The same rules for negotiating TLS cipher suites 
    as specified in  Section  5.7.3 of <a class='info' href='#I-D.ietf-nsis-ntlp'>[1]<span> (</span><span class='info'>Schulzrinne, H. and M. Stiemerling, &ldquo;GIST: General Internet Signalling Transport,&rdquo; June&nbsp;2009.</span><span>)</span></a> apply. 
 </p>
 <p>DTLS renegotiation <a class='info' href='#RFC5746'>[7]<span> (</span><span class='info'>Rescorla, E., Ray, M., Dispensa, S., and N. Oskov, &ldquo;Transport Layer Security (TLS) Renegotiation Indication Extension,&rdquo; February&nbsp;2010.</span><span>)</span></a> may cause problems for applications such
