--- a/draft-ietf-pim-registry-03.html
+++ b/draft-ietf-pim-registry-03.html
@@ -152,10 +152,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">S. Venaas</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">cisco Systems</td></tr>
-<tr><td class="header">Intended status: Informational</td><td class="header">January 10, 2011</td></tr>
-<tr><td class="header">Expires: July 14, 2011</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Standards Track</td><td class="header">January 11, 2011</td></tr>
+<tr><td class="header">Expires: July 15, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />A Registry for PIM Message Types<br />draft-ietf-pim-registry-02.txt</h1>
+<h1><br />A Registry for PIM Message Types<br />draft-ietf-pim-registry-03.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -182,7 +182,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on July 14, 2011.</p>
+This Internet-Draft will expire on July 15, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
