draft-irtf-dtnrg-bundle-security-19

--- a/draft-irtf-dtnrg-bundle-security-19.html
+++ b/draft-irtf-dtnrg-bundle-security-19.html
@@ -403,8 +403,8 @@
   <meta name="dct.identifier" content="urn:ietf:id:draft-sample-input-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2010-12" />
   
-  <meta name="dct.abstract" content="This document defines the bundle security protocol, which provides data integrity and confidentiality services for the bundle protocol.  Separate capabilities are provided to protect the bundle payload and additional data that may be included within the bundle. We also describe various bundle security considerations including policy options." />
-  <meta name="description" content="This document defines the bundle security protocol, which provides data integrity and confidentiality services for the bundle protocol.  Separate capabilities are provided to protect the bundle payload and additional data that may be included within the bundle. We also describe various bundle security considerations including policy options." />
+  <meta name="dct.abstract" content="This document defines the bundle security protocol, which provides data integrity and confidentiality services for the bundle protocol.  Separate capabilities are provided to protect the bundle payload and additional data that may be included within the bundle. We also describe various security considerations including some policy options." />
+  <meta name="description" content="This document defines the bundle security protocol, which provides data integrity and confidentiality services for the bundle protocol.  Separate capabilities are provided to protect the bundle payload and additional data that may be included within the bundle. We also describe various security considerations including some policy options." />
   <meta name="keywords" content="RFC, Request for Comments, I-D, Internet-Draft, DTN, Delay-Tolerant Networking, Disruption-Tolerant Networking" />
 
 </head>
@@ -427,7 +427,7 @@
 <td class="right">S. Farrell</td>
 </tr>
 <tr>
-<td class="left">Expires: September 10, 2011</td>
+<td class="left">Expires: September 12, 2011</td>
 <td class="right">Trinity College Dublin</td>
 </tr>
 <tr>
@@ -444,7 +444,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">March 09, 2011</td>
+<td class="right">March 11, 2011</td>
 </tr>
 
     	
@@ -452,16 +452,16 @@
   </table>
 
   <p class="title">Bundle Security Protocol Specification<br />
-  <span class="filename">draft-irtf-dtnrg-bundle-security-18</span></p>
+  <span class="filename">draft-irtf-dtnrg-bundle-security-19</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
-<p>This document defines the bundle security protocol, which provides data integrity and confidentiality services for the bundle protocol.  Separate capabilities are provided to protect the bundle payload and additional data that may be included within the bundle. We also describe various bundle security considerations including policy options.</p>
+<p>This document defines the bundle security protocol, which provides data integrity and confidentiality services for the bundle protocol.  Separate capabilities are provided to protect the bundle payload and additional data that may be included within the bundle. We also describe various security considerations including some policy options.</p>
 <p>This document is a product of the Delay Tolerant Networking Research Group and has been reviewed by that group. No objections to its publication as an RFC were raised.</p>
 <h1 id="rfc.status"><a href="#rfc.status">Status of this Memo</a></h1>
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 10, 2011.</p>
+<p>This Internet-Draft will expire on September 12, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -1103,8 +1103,9 @@ primary - PIb - PIa - payload
 <a href="#rfc.section.4">4.</a> <a href="#ciphersuites" id="ciphersuites">Mandatory Ciphersuites</a>
 </h1>
 <p id="rfc.section.4.p.1">This section defines the mandatory ciphersuites for this specification. There is currently one mandatory ciphersuite for use with each of the security block types BAB, PIB, PCB and ESB. The BAB ciphersuite is based on shared secrets using HMAC. The PIB ciphersuite is based on digital signatures using RSA with SHA-256. The PCB and ESB ciphersuites are based on using RSA for key transport and AES for bulk encryption.</p>
-<p id="rfc.section.4.p.2">The ciphersuites use the mechanisms defined in Cryptographic Message Syntax (CMS) <a href="#RFC5652">[RFC5652]</a> for packaging the keys, signatures, etc for transport in the appropriate security block. The data in the CMS object is not the bundle data, as would be the typical usage for CMS. Rather, the "message data" packaged by CMS is the ephemeral key, message digest, etc used in the core code of the ciphersuite.</p>
-<p id="rfc.section.4.p.3">In all cases where we use CMS, implementations SHOULD NOT include additional attributes whether signed or unsigned, authenticated or unauthenticated.</p>
+<p id="rfc.section.4.p.2">In all uses of CMS eContent in this specification the relevant eContentType to be used is id-data as specified in <a href="#RFC5652">[RFC5652]</a> .</p>
+<p id="rfc.section.4.p.3">The ciphersuites use the mechanisms defined in Cryptographic Message Syntax (CMS) <a href="#RFC5652">[RFC5652]</a> for packaging the keys, signatures, etc for transport in the appropriate security block. The data in the CMS object is not the bundle data, as would be the typical usage for CMS. Rather, the "message data" packaged by CMS is the ephemeral key, message digest, etc used in the core code of the ciphersuite.</p>
+<p id="rfc.section.4.p.4">In all cases where we use CMS, implementations SHOULD NOT include additional attributes whether signed or unsigned, authenticated or unauthenticated.</p>
 <h1 id="rfc.section.4.1">
 <a href="#rfc.section.4.1">4.1.</a> <a href="#BABhmac" id="BABhmac">BAB-HMAC</a>
 </h1>
@@ -1117,8 +1118,7 @@ primary - PIb - PIa - payload
 <p id="rfc.section.4.1.p.7">Inserting more than one correlated BAB pair would be useful if the bundle could be routed to more than one potential "next-hop" or if both an old or a new key were valid at sending time, with no certainty about the situation that will obtain at reception time.</p>
 <p id="rfc.section.4.1.p.8">The security result is the output of the HMAC-SHA1 calculation with input being the result of running the entire bundle through the strict canonicalisation algorithm. Both required BAB instances MUST be included in the bundle before canonicalisation.</p>
 <p id="rfc.section.4.1.p.9">Security parameters are OPTIONAL with this scheme, but if used then the only field that can be present is key information (see <a href="#sec.PRF">Section 2.6</a>).</p>
-<p id="rfc.section.4.1.p.10">Implementations MUST support use of "Enveloped-data" type as defined in <a href="#RFC5652">[RFC5652]</a> section 6, with RecipientInfo type KeyTransRecipientInfo containing the issuer and serial number of a suitable certificate. They MAY support additional RecipientInfo types. The "encryptedContent" field in EncryptedContentInfo contains the encrypted BEK that protects the payload and certain security blocks of the bundle.</p>
-<p id="rfc.section.4.1.p.11">In the absence of key information the receiver is expected to be able to find the correct key based on the sending identity. The sending identity MAY be known from the security-source field or the content of a previous-hop block in the bundle. It MAY also be determined using implementation-specific means such as the convergence layer.</p>
+<p id="rfc.section.4.1.p.10">In the absence of key information the receiver is expected to be able to find the correct key based on the sending identity. The sending identity MAY be known from the security-source field or the content of a previous-hop block in the bundle. It MAY also be determined using implementation-specific means such as the convergence layer.</p>
 <h1 id="rfc.section.4.2">
 <a href="#rfc.section.4.2">4.2.</a> <a href="#PIBrsasha" id="PIBrsasha">PIB-RSA-SHA256</a>
 </h1>
@@ -1127,6 +1127,8 @@ primary - PIb - PIa - payload
 <p id="rfc.section.4.2.p.3">Because the signature field in SignedData SignatureValue is a security-result field, the entire key information item MUST be placed in the block's security-result field, rather than security-parameters.</p>
 <p id="rfc.section.4.2.p.4">If the bundle being signed has been fragmented before signing, then we have to specify which bytes were signed in case the signed bundle is subsequently fragmented for a second time. If the bundle is a fragment, then the ciphersuite parameters MUST include a fragment-range field, as described in <a href="#sec.PRF">Section 2.6</a>, specifying the offset and length of the signed fragment. If the entire bundle is signed then these numbers MUST be omitted.</p>
 <p id="rfc.section.4.2.p.5">Implementations MUST support use of "SignedData" type as defined in <a href="#RFC5652">[RFC5652]</a> section 5.1, with SignerInfo type SignerIdentifier containing the issuer and serial number of a suitable certificate. The data to be signed is the output of the SHA256 mutable canonicalization process.</p>
+<p id="rfc.section.4.2.p.6">RSA is used with SHA256 as specified for the id-sha256 signature scheme in <a href="#RFC4055">[RFC4055]</a> Section 5. The output of the signing process is the SignatureValue field for the PIB.</p>
+<p id="rfc.section.4.2.p.7">"Commensurate strength" cryptography is generally held to be a good idea. A combination of RSA with SHA-256 is reckoned to require a 3076 bit RSA key according to this logic. Few implementations will choose this length by default (and probably some just won't support such long keys). Since this is an experimental protocol, we expect that 1024 or 2048 bit RSA keys will be used in many cases, and that that will be fine since we also expect that the hash function "issues" will be resolved before any standard would be derived from this protocol.</p>
 <h1 id="rfc.section.4.3">
 <a href="#rfc.section.4.3">4.3.</a> <a href="#rsaaes" id="rsaaes">PCB-RSA-AES128-PAYLOAD-PIB-PCB</a>
 </h1>
@@ -1417,6 +1419,11 @@ primary - PIb - PIa - payload
 <td class="reference"><b id="RFC2104">[RFC2104]</b></td>
 <td class="top">
 <a href="mailto:hugo@watson.ibm.com" title="IBM, T.J. Watson Research Center">Krawczyk, H.</a>, <a href="mailto:mihir@cs.ucsd.edu" title="University of California at San Diego, Dept of Computer Science and Engineering">Bellare, M.</a> and <a href="mailto:canetti@watson.ibm.com" title="IBM T.J. Watson Research Center">R. Canetti</a>, "<a href="http://tools.ietf.org/html/rfc2104">HMAC: Keyed-Hashing for Message Authentication</a>", RFC 2104, February 1997.</td>
+</tr>
+<tr>
+<td class="reference"><b id="RFC4055">[RFC4055]</b></td>
+<td class="top">
+<a>Schaad, J.</a>, <a>Kaliski, B.</a> and <a>R. Housley</a>, "<a href="http://tools.ietf.org/html/rfc4055">Additional Algorithms and Identifiers for RSA Cryptography for use in the Internet X.509 Public Key Infrastructure Certificate and Certificate Revocation List (CRL) Profile</a>", RFC 4055, June 2005.</td>
 </tr>
 <tr>
 <td class="reference"><b id="RFC5280">[RFC5280]</b></td>
