draft-ietf-ippm-spatial-composition-15

--- a/draft-ietf-ippm-spatial-composition-15.html
+++ b/draft-ietf-ippm-spatial-composition-15.html
@@ -153,10 +153,10 @@
 <tr><td class="header">Network Working Group</td><td class="header">A. Morton</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">AT&amp;T Labs</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">E. Stephan</td></tr>
-<tr><td class="header">Expires: January 2, 2011</td><td class="header">France Telecom Division R&amp;D</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">July 1, 2010</td></tr>
+<tr><td class="header">Expires: January 3, 2011</td><td class="header">France Telecom Division R&amp;D</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">July 2, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Spatial Composition of Metrics<br />draft-ietf-ippm-spatial-composition-14</h1>
+<h1><br />Spatial Composition of Metrics<br />draft-ietf-ippm-spatial-composition-15</h1>
 
 <h3>Abstract</h3>
 
@@ -192,7 +192,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on January 2, 2011.</p>
+This Internet-Draft will expire on January 3, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -447,7 +447,7 @@ Introduction</h3>
 <a name="rfc.section.1.1"></a><h3>1.1.&nbsp;
 Motivation</h3>
 
-<p>One-way metrics defined in other RFCs (such as <a class='info' href='#RFC2680'>[RFC2680]<span> (</span><span class='info'>Almes, G., Kalidindi, S., and M. Zekauskas, &ldquo;A One-way Packet Loss Metric for IPPM,&rdquo; September&nbsp;1999.</span><span>)</span></a> and <a class='info' href='#RFC2680'>[RFC2680]<span> (</span><span class='info'>Almes, G., Kalidindi, S., and M. Zekauskas, &ldquo;A One-way Packet Loss Metric for IPPM,&rdquo; September&nbsp;1999.</span><span>)</span></a>) all
+<p>One-way metrics defined in other RFCs (such as <a class='info' href='#RFC2679'>[RFC2679]<span> (</span><span class='info'>Almes, G., Kalidindi, S., and M. Zekauskas, &ldquo;A One-way Delay Metric for IPPM,&rdquo; September&nbsp;1999.</span><span>)</span></a> and <a class='info' href='#RFC2680'>[RFC2680]<span> (</span><span class='info'>Almes, G., Kalidindi, S., and M. Zekauskas, &ldquo;A One-way Packet Loss Metric for IPPM,&rdquo; September&nbsp;1999.</span><span>)</span></a>) all
         assume that the measurement can be practically carried out between the
         source and the destination of interest. Sometimes there are reasons
         that the measurement cannot be executed from the source to the
@@ -474,7 +474,7 @@ Scope and Application</h3>
 <a name="rfc.section.2.1"></a><h3>2.1.&nbsp;
 Scope of work</h3>
 
-<p>For the primary IPPM metrics of Loss <a class='info' href='#RFC2680'>[RFC2680]<span> (</span><span class='info'>Almes, G., Kalidindi, S., and M. Zekauskas, &ldquo;A One-way Packet Loss Metric for IPPM,&rdquo; September&nbsp;1999.</span><span>)</span></a>, Delay <a class='info' href='#RFC2680'>[RFC2680]<span> (</span><span class='info'>Almes, G., Kalidindi, S., and M. Zekauskas, &ldquo;A One-way Packet Loss Metric for IPPM,&rdquo; September&nbsp;1999.</span><span>)</span></a>, and
+<p>For the primary IPPM metrics of Loss <a class='info' href='#RFC2680'>[RFC2680]<span> (</span><span class='info'>Almes, G., Kalidindi, S., and M. Zekauskas, &ldquo;A One-way Packet Loss Metric for IPPM,&rdquo; September&nbsp;1999.</span><span>)</span></a>, Delay <a class='info' href='#RFC2679'>[RFC2679]<span> (</span><span class='info'>Almes, G., Kalidindi, S., and M. Zekauskas, &ldquo;A One-way Delay Metric for IPPM,&rdquo; September&nbsp;1999.</span><span>)</span></a>, and
         Delay Variation <a class='info' href='#RFC3393'>[RFC3393]<span> (</span><span class='info'>Demichelis, C. and P. Chimento, &ldquo;IP Packet Delay Variation Metric for IP Performance Metrics (IPPM),&rdquo; November&nbsp;2002.</span><span>)</span></a>, this memo gives a set
         of metrics that can be composed from the same or similar sub-path
         metrics. This means that the composition function may utilize: </p>
@@ -501,9 +501,9 @@ Scope of work</h3>
 <a name="rfc.section.2.2"></a><h3>2.2.&nbsp;
 Application</h3>
 
-<p>The new composition framework <a class='info' href='#RFC5835'>[RFC5835]<span> (</span><span class='info'>Morton, A. and S. Van den Berghe, &ldquo;Framework for Metric Composition,&rdquo; April&nbsp;2010.</span><span>)</span></a>
-        requires the specification of the applicable circumstances for each
-        metric. In particular, each section addresses whether the metric:
+<p>The composition framework <a class='info' href='#RFC5835'>[RFC5835]<span> (</span><span class='info'>Morton, A. and S. Van den Berghe, &ldquo;Framework for Metric Composition,&rdquo; April&nbsp;2010.</span><span>)</span></a> requires
+        the specification of the applicable circumstances for each metric. In
+        particular, each section addresses whether the metric:
 </p>
 <p>Requires the same test packets to traverse all sub-paths, or may
         use similar packets sent and collected separately in each
@@ -1588,7 +1588,7 @@ Interference with the metrics</h3>
 IANA Considerations</h3>
 
 <p>Metrics defined in IETF are typically registered in the IANA IPPM
-      METRICS REGISTRY as described in initial version of the registry <a class='info' href='#RFC4148'>[RFC4148]<span> (</span><span class='info'>Stephan, E., &ldquo;IP Performance Metrics (IPPM) Metrics Registry,&rdquo; August&nbsp;2005.</span><span>)</span></a>. 
+      METRICS REGISTRY as described in initial version of the registry <a class='info' href='#RFC4148'>[RFC4148]<span> (</span><span class='info'>Stephan, E., &ldquo;IP Performance Metrics (IPPM) Metrics Registry,&rdquo; August&nbsp;2005.</span><span>)</span></a>.
 </p>
 <p>IANA is asked to register the following metrics in the
       IANA-IPPM-METRICS-REGISTRY-MIB:
